[gd_scene load_steps=11 format=3 uid="uid://dhnq3lbpup6dq"]

[ext_resource type="Script" path="res://scripts/rod_upgrade_menu.gd" id="1_bfio7"]
[ext_resource type="Texture2D" uid="uid://douj4n118fxb6" path="res://assets/fishing rod logo.png" id="1_ys5pi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drhmg"]
bg_color = Color(0, 0, 0, 0.819608)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sxg20"]
bg_color = Color(0.0987284, 0.0987284, 0.0987283, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bh0n7"]
bg_color = Color(0.197937, 0.197937, 0.197937, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmmyc"]
bg_color = Color(0.341584, 0.341584, 0.341584, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_w1phx"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.225313, 0.258816),
"update": 0,
"values": [Vector2(0, -676), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_381fn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -676)]
}

[sub_resource type="Animation" id="Animation_8xowy"]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.258816, 0.225313),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -676)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ovhds"]
_data = {
"RESET": SubResource("Animation_381fn"),
"close": SubResource("Animation_8xowy"),
"open": SubResource("Animation_w1phx")
}

[node name="rod_upgrade_menu" type="CanvasLayer"]
script = ExtResource("1_bfio7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -676.0
offset_bottom = -676.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -461.0
offset_top = 20.0
offset_right = 461.0
offset_bottom = 659.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_drhmg")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 110)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center][rainbow sat=0.3][wave amp=60]Rod Luck Upgrade"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
texture = ExtResource("1_ys5pi")
stretch_mode = 4

[node name="BackButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_sxg20")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="UpgradeText" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Luck Upgrade 10
"
horizontal_alignment = 2

[node name="MoneyText" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "$9999
"
horizontal_alignment = 2

[node name="LevelText" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Must be level 50"
horizontal_alignment = 2

[node name="UpgradeButton" type="Button" parent="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/hover = SubResource("StyleBoxFlat_tmmyc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_bh0n7")
theme_override_styles/normal = SubResource("StyleBoxFlat_bh0n7")
text = "Buy Upgrade"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ovhds")
}

[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Control/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/UpgradeButton" to="." method="_on_upgrade_button_pressed"]
